--- a/index.html
+++ b/index.html
@@ -17,24 +17,24 @@
       <h2 class="section-title">Параметры</h2>
       <label class="label">
         <span>Масса груза:</span>
-        <input id="k" type="number" value="0.5" min="0.5" max="1" step="0.1" />
+        <input class="input" id="k" type="number" value="0.5" min="0.5" max="1" step="0.1" />
         кг (m)
       </label>
       <label class="label">
         <span>Жесткость пружины:</span>
-        <input id="m" type="number" value="5" min="5" max="9" step="1" /> Н/м
+        <input class="input" id="m" type="number" value="5" min="5" max="9" step="1" /> Н/м
         (k)
       </label>
       <label class="label">
         <span>Первоначальное отклонение от равновесия (вниз):</span>
-        <input type="number" value="10" min="0" max="20" step="2" /> см (x0)
+        <input class="input" type="number" value="10" min="0" max="20" step="2" /> см (x0)
       </label>
     </section>
 
     <section class="characteristics">
       <h2 class="section-title">Характеристики</h2>
       <label class="label">
-        <span>Циклическая частота собственных колебаний:</span>
+        <span>Циклическая частота колебаний:</span>
         <span class="character" id="frequency"></span> (f)
       </label>
       <label class="label">
