--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Пружинный маятник</title>
     <link rel="stylesheet" href="./css/index.css" />
+    <link rel="shortcut icon" href="./img/favicon.svg" type="image/x-icon">
   </head>
   <body class="page">
     <h1 class="main-title">Пружинный маятник</h1>
