--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </label>
       <label class="label">
         <span>Первоначальное отклонение от равновесия (вниз):</span>
-        <input class="input" type="number" value="10" min="0" max="20" step="2" /> см (x0)
+        <input id="x0" class="input" type="number" value="10" min="0" max="20" step="2" /> см (x0)
       </label>
     </section>
 
@@ -36,19 +36,19 @@
       <h2 class="section-title">Характеристики</h2>
       <label class="label">
         <span>Циклическая частота колебаний:</span>
-        <span class="character" id="frequency"></span> (f)
+        <span class="character" id="w0"></span> (f)
       </label>
       <label class="label">
         <span>Время колебаний:</span>
-        <span class="character character_need-play" id="time"></span> сек (t)
+        <span class="character character_need-play" id="t"></span> сек (t)
       </label>
       <label class="label">
         <span>Количество полных колебаний:</span>
-        <span class="character character_need-play" id="hesitations"></span> (h)
+        <span class="character character_need-play" id="h"></span> (h)
       </label>
       <label class="label">
         <span>Координата X:</span>
-        <span class="character character_need-play" id="coordinateX"></span> см
+        <span class="character character_need-play" id="x"></span> см
         (x)
       </label>
     </section>
