--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <h2 class="section-title">Характеристики</h2>
       <label class="label">
         <span>Циклическая частота колебаний:</span>
-        <span class="character" id="w0"></span> (f)
+        <span class="character" id="w0"></span> (w0)
       </label>
       <label class="label">
         <span>Время колебаний:</span>
